fixing symbols on ios

--- a/webdmx/src/main/resources/resources/index.css
+++ b/webdmx/src/main/resources/resources/index.css
@@ -10,6 +10,7 @@ textarea:focus,
 button:focus {
     outline: none;
 }
+
 button {
 	border-radius: 5px;
     background-color: white;
@@ -60,6 +61,9 @@ select{
 .command button{
 	height: 80px;
 	width: 100px;
+}
+#presets>button {
+    margin: 5px;
 }
 #fixture>button, div.inlinecmd>button{
 	width: 80px;
@@ -167,27 +171,4 @@ input[type=range]::-webkit-slider-thumb {
 	top: -52px;
 	background-color: black;
 	padding: 1px 5px;
-}
-
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(gfont.woff2) format('woff2');
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
 }
